src/main.c
@@ -378,9 +378,17 @@ static gboolean gpredict_app_config(GtkWidget * widget,
     w = gdk_screen_width();
     h = gdk_screen_height();
 #else
+    GdkWindow      *window;
+    GdkDisplay     *display;
+    GdkMonitor     *monitor;
     GdkRectangle    work_area;
-    gdk_monitor_get_workarea(gdk_display_get_primary_monitor(gdk_display_get_default()),
-                             &work_area);
+
+    /* https://gitlab.gnome.org/GNOME/gtk/-/issues/1028 */
+    window = gtk_widget_get_window(widget);
+    display = gtk_widget_get_display(widget);
+    monitor = gdk_display_get_monitor_at_window(display, window);
+    gdk_monitor_get_workarea(monitor, &work_area);
+
     w = work_area.width;
     h = work_area.height;
 #endif
